# ltxbot

./: .gitignore  .travis.yml  Common.hs  Fixture.hs  LICENSE  Latex.hs  Main.hs  README.markdown  docker-tex2png.sh  ltxbot.cabal  ltxbot.conf  ltxbot.example.conf  package.yaml  stack.yaml  tex2png.sh  tweet-hatex.cabal  tweet-hatex.example.conf
.halcyon/: constraints
Tests/: Fixtures.hs  Main.hs
Web/Twitter/: LtxBot.hs
Web/Twitter/LtxBot/: Common.hs  Latex.hs  Types.hs
ansible/group_vars/: base
ansible/roles/handlers/: main.yml
ansible/roles/tasks/: main.yaml
ansible/roles/templates/: supervisor.conf  version.txt
app/: Main.hs
src/Web/Twitter/: LtxBot.hs
src/Web/Twitter/LtxBot/: Common.hs  Types.hs
