name:                ltxbot
version:             0.0.5
synopsis:            Twitter Bot turning LaTeX tweets into PNGs
homepage:            https://github.com/passy/ltxbot
license:             MIT
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          passy@twitter.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ltxbot
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:       base >=4.7 && <4.8
                     , twitter-conduit >= 0.0.6
                     , twitter-types
                     , HaTeX
                     , conduit
                     , network-uri
                     , containers
                     , case-insensitive
                     , lens
                     , transformers-base
                     , monad-logger
                     , authenticate-oauth >=1.4
                     , cmdargs >= 0.10
                     , bytestring >=0.10
                     , conduit >= 1.0
                     , configurator >= 0.2
                     , exceptions >= 0.5
                     , http-conduit >= 2.0
                     , resourcet >= 0.4
                     , text >= 1.1 && < 1.2
                     , transformers >= 0.3
                     , temporary
                     , filepath
                     , process
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -auto-all
                       -caf-all

test-suite spec_main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      Tests, .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , twitter-conduit >= 0.0.6
                     , twitter-types
                     , HaTeX
                     , conduit
                     , network-uri
                     , containers
                     , case-insensitive
                     , lens
                     , transformers-base
                     , monad-logger
                     , authenticate-oauth >=1.4
                     , bytestring >=0.10
                     , conduit >= 1.0
                     , configurator >= 0.2
                     , exceptions >= 0.5
                     , http-conduit >= 2.0
                     , resourcet >= 0.4
                     , text >= 1.1 && < 1.2
                     , transformers >= 0.3
                     , temporary
                     , filepath
                     , process
                     , hspec
