name:                ltxbot
version:             0.1.0
synopsis:            Twitter Bot turning LaTeX tweets into PNGs
homepage:            https://github.com/passy/ltxbot
license:             MIT
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          passy@twitter.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ltxbot
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:       base ==4.*
                     , HaTeX
                     , authenticate-oauth >=1.4
                     , bytestring >=0.10
                     , case-insensitive
                     , cmdargs >= 0.10
                     , conduit >= 1.0
                     , configurator >= 0.2
                     , containers
                     , exceptions >= 0.5
                     , filepath
                     , http-conduit >= 2.0
                     , lens >= 4.0
                     , lens-action
                     , monad-logger
                     , mtl
                     , network-uri
                     , process
                     , resourcet >= 0.4
                     , temporary
                     , text >= 1.1
                     , transformers >= 0.3
                     , transformers-base
                     , twitter-conduit
                     , twitter-types
                     , twitter-types-lens
                     , aeson
                     , time
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -auto-all
                       -caf-all

test-suite spec_main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      Tests, .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base ==4.*
                     , twitter-conduit
                     , twitter-types
                     , twitter-types-lens
                     , HaTeX
                     , mtl
                     , network-uri
                     , containers
                     , case-insensitive
                     , lens >=4.0
                     , lens-action
                     , transformers-base
                     , monad-logger
                     , authenticate-oauth >=1.4
                     , bytestring >=0.10
                     , conduit >= 1.0
                     , configurator >= 0.2
                     , exceptions >= 0.5
                     , http-conduit >= 2.0
                     , resourcet >= 0.4
                     , text >= 1.1
                     , transformers >= 0.3
                     , temporary
                     , filepath
                     , process
                     , hspec
                     , time
                     , aeson
