name:                tweet-hatex
version:             0.1.0.0
synopsis:            Twitter Bot turning LaTeX tweets into PNGs
homepage:            https://github.com/passy/tweet-hatex
license:             MIT
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          passy@twitter.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tweet-hatex
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:       base >=4.7 && <4.8
                     , twitter-conduit
                     , twitter-types
                     , HaTeX
                     , conduit
                     , authenticate-oauth >=1.4
                     , bytestring >=0.10
                     , conduit >= 1.0
                     , configurator >= 0.2
                     , exceptions >= 0.5
                     , http-conduit >= 2.0
                     , random >= 1.0
                     , resourcet >= 0.4
                     , text >= 1.1
                     , transformers >= 0.3
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -fwarn-implicit-prelude
